--- a/packages/rooms/bedroom.yaml
+++ b/packages/rooms/bedroom.yaml
@@ -77,7 +77,7 @@ automation:
     description: ''
     trigger:
     - platform: time
-      at: '20:30:00'
+      at: '20:25:00'
     condition:
       - condition: state
         entity_id: light.bedroom_lights
@@ -102,7 +102,7 @@ automation:
         brightness_pct: 10
     - service: light.turn_off
       data:
-        entity_id: light.familyroom_lights
+        entity_id: light.loungeroom_lights
     - service: light.turn_off
       data:
         entity_id: light.entry_lights
@@ -124,7 +124,7 @@ automation:
         entity_id: light.bedroom_lights
     - service: light.turn_off
       data:
-        entity_id: light.familyroom_lights
+        entity_id: light.loungeroom_lights
     - service: light.turn_off
       data:
         entity_id: light.entry_lights
