--- a/packages/rooms/driveway.yaml
+++ b/packages/rooms/driveway.yaml
@@ -101,3 +101,28 @@ automation:
         data:
           image: /api/camera_proxy/camera.driveway_person
     mode: single
+  - id: '1618649719645'
+    alias: Motion - Top of Driveway car
+    description: ''
+    trigger:
+    - platform: state
+      entity_id: binary_sensor.top_of_driveway_car_motion
+      from: 'off'
+      to: 'on'
+    condition:
+    - condition: or
+      conditions:
+      - condition: sun
+        before: sunrise
+        before_offset: '-1:00:00'
+      - condition: sun
+        after: sunset
+        after_offset: '-1:00:00'
+    action:
+    - service: light.turn_on
+      entity_id: light.driveway_lights
+    - delay:
+        minutes: 3
+    - service: light.turn_off
+      entity_id: light.driveway_lights
+    mode: restart
