--- a/packages/rooms/driveway.yaml
+++ b/packages/rooms/driveway.yaml
@@ -126,3 +126,30 @@ automation:
     - service: light.turn_off
       entity_id: light.driveway_lights
     mode: restart
+  - id: '1619735738674'
+    alias: Turn driveway lights on when arriving home
+    description: ''
+    trigger:
+    - platform: zone
+      entity_id: person.chris
+      zone: zone.home
+      event: enter
+    - platform: zone
+      entity_id: person.mel
+      zone: zone.home
+      event: enter
+    condition:
+    - condition: sun
+      before: sunrise
+      after: sunset
+    action:
+    - service: light.turn_on
+      entity_id: light.driveway_lights
+    - delay:
+        hours: 0
+        minutes: 3
+        seconds: 0
+        milliseconds: 0
+    - service: light.turn_off
+      entity_id: light.driveway_lights
+    mode: restart
