--- a/packages/rooms/driveway.yaml
+++ b/packages/rooms/driveway.yaml
@@ -10,7 +10,7 @@ automation:
     description: ''
     trigger:
     - platform: state
-      entity_id: binary_sensor.front_door_sensor_contact
+      entity_id: binary_sensor.front_door_contact
       from: 'off'
       to: 'on'
     condition:
