--- a/packages/xiaomi.yaml
+++ b/packages/xiaomi.yaml
@@ -6,5 +6,9 @@ camera:
     username: !secret xiaomi_cloud_username
     password: !secret xiaomi_cloud_password
     draw: ['all']
+    colors:
+      color_path: [255, 255, 255]
+    sizes:
+      vacuum_radius: 6
     attributes:
       - calibration_points
