--- a/packages/rooms/garage.yaml
+++ b/packages/rooms/garage.yaml
@@ -27,7 +27,7 @@ automation:
       from: 'off'
       to: 'on'
     - platform: state
-      entity_id: binary_sensor.garage_entry_open
+      entity_id: binary_sensor.garageentry_contact
       from: 'off'
       to: 'on'
     condition:
@@ -46,6 +46,11 @@ automation:
       - platform: state
         entity_id: binary_sensor.garage_person_motion
         to: 'off'
+      - platform: state
+        entity_id: binary_sensor.garageentry_contact
+        to: 'off'
+      timeout:
+        minutes: 30
     - service: light.turn_off
       entity_id: light.garage_lights
     mode: restart
