--- a/custom_components/average/manifest.json
+++ b/custom_components/average/manifest.json
@@ -1,11 +1,12 @@
 {
   "domain": "average",
   "name": "Average Sensor",
-  "version": "2.0.0",
+  "version": "2.0.2",
   "documentation": "https://github.com/Limych/ha-average",
   "issue_tracker": "https://github.com/Limych/ha-average/issues",
   "dependencies": [
-    "history"
+    "history",
+    "recorder"
   ],
   "after_dependencies": [
     "weather"
