--- a/packages/rooms/loungeroom.yaml
+++ b/packages/rooms/loungeroom.yaml
@@ -8,6 +8,7 @@ group:
       - light.lounge_mr
       - light.lounge_fl
       - light.lounge_fr
+
 light:
   - platform: group
     name: loungeroom Lights
@@ -93,6 +94,25 @@ switch:
           service: scene.turn_on
           target:
             entity_id: scene.loungeroom_off
+  - platform: mqtt
+    name: "Loungeroom Blind Motor Direction"
+    icon: mdi:blinds
+    state_topic: "tele/LoungeroomBlind/RESULT"
+    state_on: 1
+    state_off: 0
+    value_template: >-
+        {% if value_json['TuyaReceived'].DpType1Id5 is defined %}
+        {{ value_json.TuyaReceived.DpType1Id5 }}
+        {% else %}  
+        {{ states('switch.motor_direction') }}
+        {% endif %}  
+    command_topic: "cmnd/LoungeroomBlind/TuyaSend"
+    payload_on: "5,1"
+    payload_off: "5,0"
+    availability_topic: "tele/LoungeroomBlind/LWT"
+    payload_available: "Online"
+    payload_not_available: "Offline"
+
 
 cover:
   - platform: mqtt
@@ -106,13 +126,28 @@ cover:
     position_open: 0
     position_closed: 100
     position_topic: "tele/LoungeroomBlind/STATE"
-    state_topic: "tele/LoungeroomBlind/STATE"
-    value_template: '{{ value_json.Dimmer }}'
+    position_template: '{{ value_json.Dimmer }}'
     set_position_topic: "cmnd/LoungeroomBlind/Dimmer"
     set_position_template: '{{ 100 - position | int }}'
     availability_topic: "tele/LoungeroomBlind/LWT"
     payload_available: "Online"
     payload_not_available: "Offline"
+
+binary_sensor:
+- platform: mqtt
+  name: "Loungeroom Blind Motor Error"
+  state_topic: "tele/LoungeroomBlind/RESULT"
+  device_class: problem
+  value_template: >-
+      {% if value_json.TuyaReceived.DpType5Id10 is defined %}      
+        {% if value_json.TuyaReceived.DpType5Id10  == '0x00' %}      
+        OFF
+        {% else %}
+        ON
+        {% endif %}
+      {% else %}
+      OFF
+      {% endif %}
 
 automation:
   - id: '1613520733143'
