--- a/packages/rooms/wholehouse.yaml
+++ b/packages/rooms/wholehouse.yaml
@@ -9,6 +9,7 @@ automation:
       - light.lucas_lights
       - light.bedroom_lights
       - light.entry_lights
+      - light.office_lights
       from: 'off'
       to: 'on'
     condition:
@@ -22,3 +23,22 @@ automation:
         entity_id: '{{ trigger.entity_id }}'
     mode: parallel
     max: 100
+  - id: '1610484353998'
+    alias: Notify - HACS updates
+    trigger:
+      platform: state
+      entity_id: sensor.hacs
+    condition:
+      - condition: template
+        value_template: "{{ states(trigger.entity_id) != 'unknown'}}"
+      - condition: template
+        value_template: "{{ (states(trigger.entity_id) | float) != 0}}"
+    action:
+      service: persistent_notification.create
+      data_template:
+        title: Updates pending in HACS
+        notification_id: hacs-update
+        message: >-
+          {% for repo in state_attr(trigger.entity_id, 'repositories') %}
+            **{{ repo.display_name }}** _{{ repo["installed_version"] }}_ -> _{{ repo["available_version"] }}_
+          {% endfor %}
