Trigger on light level

--- a/packages/rooms/entry.yaml
+++ b/packages/rooms/entry.yaml
@@ -9,9 +9,10 @@ automation:
     alias: Entry - Lights on at sunset
     description: ''
     trigger:
-    - platform: sun
-      event: sunset
-      offset: "-01:00:00"
+    - platform: numeric_state
+      entity_id: sensor.entry_sensor_illuminance_lux
+      below: 200
+      for: "00:05:00"
     condition: []
     action:
     - domain: light
